# Console-Tetris

./: .gitignore  README.md  pyproject.toml  tetris.py  tetris.spec
