[tool.poetry]
name = "tetris"
version = "0.1.0"
description = "tetris game with curses module"
authors = ["placeholder2"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<3.15"
windows-curses = ">=2.4.1,<3.0.0"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.15.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
